# notch-farm

./: .gitignore  README.md
notch-bot/: Cargo.toml
notch-bot/migrations/: 20220508015737_arguments.sql  20220520154438_initial_migration.sql
notch-bot/src/: dao.rs  main.rs
notch-bot/src/commands/: mod.rs  notch.rs
notch-bot/src/models/: argument.rs  database.rs  mod.rs
notch-server/: .env  Cargo.toml
notch-server/migrations/: 20220508015737_arguments.sql
notch-server/src/: main.rs
notch-server/src/controllers/: mod.rs
notch-server/src/models/: argument.rs  mod.rs
notch-server/src/routes/: argument_routes.rs  health_controller.rs  health_routes.rs  mod.rs
